--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -13,6 +13,29 @@ h2.block-title {
 	text-transform: uppercase;
 }
 
+.node-type-session h2.block-title {
+  color: #fff;
+  font-size: 16px;
+  padding: 15px;
+  margin: 0;
+  text-transform: none;
+}
+.node-type-session .field .field-label {
+  font-weight: bold;
+  line-height: 27px;
+}
+.node-type-session .field-name-field-accepted
+{
+  margin-left: 12px;
+  margin-top: 20px;
+}
+.node-type-session .field-name-field-experience,
+.node-type-session .field-name-field-session-other-info,
+.node-type-session .field-name-field-session-track
+{
+  margin-left: 12px;
+  margin-top: 12px;
+}
 h2.block-title a {
 	color: #fff;
 }
@@ -830,7 +853,7 @@ body.node-type-session .field-name-field-presenters {
 }
 
 body.node-type-session .field-name-field-presenters .field-name-ds-user-picture {
-	width: 25%;
+	width: 35%;
 	float: right;
 	margin-bottom: 1em;
 	margin-left: .5em;
@@ -864,11 +887,16 @@ body.node-type-session .field-name-field-presenters .field-name-field-profile-jo
 
 body.node-type-session #block-views-session-schedule-details-block {
 	color: gray;	
-  font-size: 80%;
   border-bottom: 1px solid #dcdcdc;
   border-left: 1px solid #dcdcdc;
   border-right: 1px solid #dcdcdc;
 	margin-bottom: 0;
+}
+
+.ds-2col-stacked > .group-left {
+  float: left;
+  width: 50%;
+  padding-right: 6px;
 }
 
 body.node-type-session #block-views-session-schedule-details-block block__title block-title {
@@ -877,28 +905,9 @@ body.node-type-session #block-views-session-schedule-details-block block__title 
 
 body.node-type-session .field-name-block-session-schedule-details .views-field-field-schedule-slot-conf-day {
 	font-weight: bold;
+  padding-top: 12px;
+
 }
-
-
-body.node-type-session .field-name-field-accepted,
-body.node-type-session .field-name-field-session-track .field-label,
-body.node-type-session .field-name-field-session-track a,
-body.node-type-session .field-name-field-experience,
-body.node-type-session .field-name-field-session-other-info {
-	font-size: 80%;
-}
-
-
-body.node-type-session .field-name-field-accepted .field-label,
-body.node-type-session .field-name-field-session-track .field-label,
-body.node-type-session .field-name-field-experience .field-label,
-body.node-type-session .field-name-field-session-other-info .field-label {	
-	width: 35%;
-	text-align: right;
-	padding-right: .35em;
-}
-
-
 
 /* USER PROFILES - Full */  
 
