adds white background to lead sponsor block

--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -1066,3 +1066,10 @@ div.panel-pane.pane-views.pane-team {
   height: 100%;
 }
 
+/*
+ * Lead sponsor block
+ */
+
+#block-views-sponsors-lead-block {
+	background-color: white;
+}
