adds some more style

--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -1081,12 +1081,38 @@ div.panel-pane.pane-views.pane-team {
 #DevOpsSchedule {
   max-width: 100%;
 }
+
 #DevOpsSchedule .title-row {
   text-align: center;
 }
+
+#DevOpsSchedule tr td:nth-child(1) {
+	font-weight: bold;
+	font-size: .85em;
+}
+
+
+#DevOpsSchedule tr td:nth-child(2),
+#DevOpsSchedule tr td:nth-child(3) {
+  width: 42%;
+}
+
+#DevOpsSchedule .two-column-title {
+  text-align: center;
+}
+
+#DevOpsSchedule h4 {
+	line-height: 1.4em;
+	margin: 5px 0 3px;
+	font-weight: bold;
+	font-size: .95em;
+}
+
 #DevOpsSchedule p {
   background-color: transparent;
-  color: black;
   font-family: arial;
+  margin: 0;
+  font-size: .9em;
 }
+
 
