--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -310,8 +310,25 @@
 		margin: 0.5em 0 !important;
 	}
 
+	.node-session.view-mode-featured .field-name-title h2 {
+		font-size: 2.5em;
+	}
+
+	.node-session.view-mode-featured .field-name-field-event-subtitle {
+		font-size: 1.25em;
+	}
+
 }
 
+@media (max-width:480px) {
+	.node-session.view-mode-featured .field-name-title h2 {
+		font-size: 2.5em;
+	}
+
+	.node-session.view-mode-featured .field-name-field-event-subtitle {
+		font-size: 1.2em;
+	}
+}
 
 
 /* Mobile (Landscape)
