Adding missing } which was causing problems on mobile

--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -1328,3 +1328,4 @@ body.node-type-session .field-name-block-session-schedule-details .views-field-f
 .field-name-add-to-my-sessions-flag .flag-flagged-message {
 	margin-top: 1.25em;
 	color: green;
+}
